typo in group by for the data_analysis file

--- a/tutorials/data_analysis.ipynb
+++ b/tutorials/data_analysis.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "name                                  Line 4\n",
+       "name                                  Line 1\n",
        "std_type        NA2XS2Y 1x185 RM/25 12/20 kV\n",
-       "from_bus                                 239\n",
-       "to_bus                                   236\n",
-       "length_km                           0.381968\n",
+       "from_bus                                 238\n",
+       "to_bus                                    40\n",
+       "length_km                             1.3735\n",
        "r_ohm_per_km                           0.161\n",
        "x_ohm_per_km                           0.117\n",
        "c_nf_per_km                            273.0\n",
@@ -68,17 +68,17 @@
        "parallel                                   1\n",
        "type                                      cs\n",
        "in_service                              True\n",
-       "Name: 4, dtype: object"
+       "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Detailed information about line 4\n",
-    "net.line.loc[4]"
+    "net.line.loc[1]"
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "Name: length_km, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "array([3.3028, 0.3504])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "6     0.3504         0.161         0.117        273.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "       [3.5040e-01, 1.6100e-01, 1.1700e-01, 2.7300e+02]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "0.3504"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: length_km, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,10 +410,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also group elements that share the same value in any column of the dataframe with the groubpy function of pandas;"
+    "You can also group elements that share the same value in any column of the dataframe with the groupby function of pandas;"
    ]
   },
   {
@@ -2240,7 +2241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
