--- a/tutorials/create_simple.ipynb
+++ b/tutorials/create_simple.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "6            MV Bus 2   20.0    b  None        True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
+       "      <td>grid</td>\n",
        "      <td>0</td>\n",
        "      <td>1.02</td>\n",
        "      <td>50.0</td>\n",
@@ -316,16 +316,16 @@
       ],
       "text/plain": [
        "   name  bus  vm_pu  va_degree  slack_weight  in_service\n",
-       "0  None    0   1.02       50.0           1.0        True"
+       "0  grid    0   1.02       50.0           1.0        True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pp.create_ext_grid(net, bus1, vm_pu=1.02, va_degree=50) # Create an external grid connection\n",
+    "pp.create_ext_grid(net,  bus1, vm_pu=1.02, va_degree=50, name=\"grid\") # Create an external grid connection\n",
     "\n",
     "net.ext_grid #show external grid table"
    ]
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -400,7 +400,9 @@
        "      <th>vk_percent</th>\n",
        "      <th>vkr_percent</th>\n",
        "      <th>pfe_kw</th>\n",
-       "      <th>...</th>\n",
+       "      <th>i0_percent</th>\n",
+       "      <th>shift_degree</th>\n",
+       "      <th>tap_side</th>\n",
        "      <th>tap_neutral</th>\n",
        "      <th>tap_min</th>\n",
        "      <th>tap_max</th>\n",
@@ -426,7 +428,9 @@
        "      <td>12.0</td>\n",
        "      <td>0.41</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>hv</td>\n",
        "      <td>0</td>\n",
        "      <td>-9</td>\n",
        "      <td>9</td>\n",
@@ -440,26 +444,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     name          std_type  hv_bus  lv_bus  sn_mva  vn_hv_kv  \\\n",
        "0  110kV/20kV transformer  25 MVA 110/20 kV       2       3    25.0     110.0   \n",
        "\n",
-       "   vn_lv_kv  vk_percent  vkr_percent  pfe_kw  ...  tap_neutral  tap_min  \\\n",
-       "0      20.0        12.0         0.41    14.0  ...            0       -9   \n",
+       "   vn_lv_kv  vk_percent  vkr_percent  pfe_kw  i0_percent  shift_degree  \\\n",
+       "0      20.0        12.0         0.41    14.0        0.07         150.0   \n",
        "\n",
-       "  tap_max  tap_step_percent  tap_step_degree  tap_pos  tap_phase_shifter  \\\n",
-       "0       9               1.5              0.0        0              False   \n",
+       "  tap_side  tap_neutral  tap_min  tap_max  tap_step_percent  tap_step_degree  \\\n",
+       "0       hv            0       -9        9               1.5              0.0   \n",
        "\n",
-       "   parallel   df  in_service  \n",
-       "0         1  1.0        True  \n",
-       "\n",
-       "[1 rows x 23 columns]"
+       "   tap_pos  tap_phase_shifter  parallel   df  in_service  \n",
+       "0        0              False         1  1.0        True  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +646,7 @@
        "3         1   cs        True  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +849,7 @@
        "7    4        3  l  LBS    True  None    0.0    NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +938,7 @@
        "0        True  wye  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1038,7 @@
        "1      1.0        True  wye  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,15 +1059,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The static generator element is used to model constant active and reactive power generation. Since the signing system used in pandapower is always from a consumers point of view, the active power has to be negative to model generation. We create a static generator with 2 MW generation and 500 kVar."
+    "The static generator element is used to model constant active and reactive power generation. Since the signing system used in pandapower is always from a consumers point of view, the active power has to be negative to model generation. We create a static generator with 2 MW generation and 500 kVar. [google](wwww.google.com)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1128,7 @@
        "0            True  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1225,7 @@
        "0  False        True           0.0  None                  NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1317,7 @@
        "0    2  Shunt   -0.96   0.0  110.0     1         1        True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
