--- a/tutorials/completed/minimal_example.ipynb
+++ b/tutorials/completed/minimal_example.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "2  Bus 3    0.4    b  None        True"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "0        True  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "0              False         1  1.0        True  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "0        True  wye  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,9 +429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "numba cannot be imported and numba functions are disabled.\n",
+      "Probably the execution is slow.\n",
+      "Please install numba to gain a massive speedup.\n",
+      "(or if you prefer slow execution, set the flag numba=False to avoid this warning!)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "pp.runpp(net)"
    ]
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +520,7 @@
        "2  0.964431   0.115859  0.100000  0.050000"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +604,7 @@
        "0       117.835208  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +683,7 @@
        "0  0.167325      1.02           0.0  1.008843     -0.760126        29.289513  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,9 +703,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "numba cannot be imported and numba functions are disabled.\n",
+      "Probably the execution is slow.\n",
+      "Please install numba to gain a massive speedup.\n",
+      "(or if you prefer slow execution, set the flag numba=False to avoid this warning!)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "net.trafo.tap_pos.at[trafo] = -1\n",
     "pp.runpp(net)"
@@ -708,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +795,7 @@
        "2  0.992135   0.109513  0.100000  0.050000"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +824,7 @@
        "0"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,9 +852,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "numba cannot be imported and numba functions are disabled.\n",
+      "Probably the execution is slow.\n",
+      "Please install numba to gain a massive speedup.\n",
+      "(or if you prefer slow execution, set the flag numba=False to avoid this warning!)\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -891,7 +926,7 @@
        "2       NaN        NaN  0.000000  0.000000"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +988,7 @@
        "0   0.0     0.0"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1014,14 +1049,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.230380e-13</td>\n",
-       "      <td>-0.000001</td>\n",
-       "      <td>-4.645745e-16</td>\n",
-       "      <td>4.580705e-20</td>\n",
        "      <td>1.225734e-13</td>\n",
        "      <td>-0.000001</td>\n",
+       "      <td>-4.645803e-16</td>\n",
+       "      <td>-5.802601e-17</td>\n",
+       "      <td>1.221088e-13</td>\n",
+       "      <td>-0.000001</td>\n",
        "      <td>0.000002</td>\n",
-       "      <td>6.409876e-16</td>\n",
+       "      <td>6.459759e-16</td>\n",
        "      <td>0.000002</td>\n",
        "      <td>1.046129</td>\n",
        "      <td>-0.005637</td>\n",
@@ -1035,16 +1070,16 @@
       ],
       "text/plain": [
        "      p_from_mw  q_from_mvar       p_to_mw     q_to_mvar         pl_mw  \\\n",
-       "0  1.230380e-13    -0.000001 -4.645745e-16  4.580705e-20  1.225734e-13   \n",
+       "0  1.225734e-13    -0.000001 -4.645803e-16 -5.802601e-17  1.221088e-13   \n",
        "\n",
        "    ql_mvar  i_from_ka       i_to_ka      i_ka  vm_from_pu  va_from_degree  \\\n",
-       "0 -0.000001   0.000002  6.409876e-16  0.000002    1.046129       -0.005637   \n",
+       "0 -0.000001   0.000002  6.459759e-16  0.000002    1.046129       -0.005637   \n",
        "\n",
        "   vm_to_pu  va_to_degree  loading_percent  \n",
        "0  1.046129     -0.005649         0.001122  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1108,7 @@
        "{2}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1136,7 @@
        "set()"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1182,7 @@
        "[2, 1]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1310,7 @@
        "2  0.122698   0.085008  0.176991  2.070130  0.033590"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
