--- a/tutorials/create_advanced.ipynb
+++ b/tutorials/create_advanced.ipynb
@@ -840,7 +840,10 @@
        "      <th>vk_percent</th>\n",
        "      <th>vkr_percent</th>\n",
        "      <th>pfe_kw</th>\n",
-       "      <th>...</th>\n",
+       "      <th>i0_percent</th>\n",
+       "      <th>shift_degree</th>\n",
+       "      <th>tap_side</th>\n",
+       "      <th>tap_neutral</th>\n",
        "      <th>tap_min</th>\n",
        "      <th>tap_max</th>\n",
        "      <th>tap_step_percent</th>\n",
@@ -866,7 +869,10 @@
        "      <td>8.0</td>\n",
        "      <td>0.06</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -880,23 +886,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           name std_type  hv_bus  lv_bus  sn_mva  vn_hv_kv  vn_lv_kv  \\\n",
        "0  EHV-HV-Trafo     None      13      17   300.0     380.0     110.0   \n",
        "\n",
-       "   vk_percent  vkr_percent  pfe_kw  ...  tap_min  tap_max tap_step_percent  \\\n",
-       "0         8.0         0.06     0.0  ...      NaN      NaN              NaN   \n",
+       "   vk_percent  vkr_percent  pfe_kw  i0_percent  shift_degree tap_side  \\\n",
+       "0         8.0         0.06     0.0         0.0           0.0     None   \n",
        "\n",
-       "   tap_step_degree  tap_pos  tap_phase_shifter  parallel   df  in_service  \\\n",
-       "0              NaN      NaN              False         1  1.0        True   \n",
+       "   tap_neutral  tap_min  tap_max  tap_step_percent  tap_step_degree  tap_pos  \\\n",
+       "0          NaN      NaN      NaN               NaN              NaN      NaN   \n",
        "\n",
-       "   tp_pos  \n",
-       "0     0.0  \n",
-       "\n",
-       "[1 rows x 24 columns]"
+       "   tap_phase_shifter  parallel   df  in_service  tp_pos  \n",
+       "0              False         1  1.0        True     0.0  "
       ]
      },
      "execution_count": 5,
@@ -3211,7 +3214,23 @@
        "      <th>sn_lv_mva</th>\n",
        "      <th>vn_hv_kv</th>\n",
        "      <th>vn_mv_kv</th>\n",
-       "      <th>...</th>\n",
+       "      <th>vn_lv_kv</th>\n",
+       "      <th>vk_hv_percent</th>\n",
+       "      <th>vk_mv_percent</th>\n",
+       "      <th>vk_lv_percent</th>\n",
+       "      <th>vkr_hv_percent</th>\n",
+       "      <th>vkr_mv_percent</th>\n",
+       "      <th>vkr_lv_percent</th>\n",
+       "      <th>pfe_kw</th>\n",
+       "      <th>i0_percent</th>\n",
+       "      <th>shift_mv_degree</th>\n",
+       "      <th>shift_lv_degree</th>\n",
+       "      <th>tap_side</th>\n",
+       "      <th>tap_neutral</th>\n",
+       "      <th>tap_min</th>\n",
+       "      <th>tap_max</th>\n",
+       "      <th>tap_step_percent</th>\n",
+       "      <th>tap_step_degree</th>\n",
        "      <th>tap_pos</th>\n",
        "      <th>tap_at_star_point</th>\n",
        "      <th>in_service</th>\n",
@@ -3237,7 +3256,23 @@
        "      <td>25.0</td>\n",
        "      <td>110.0</td>\n",
        "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>hv</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -3251,23 +3286,32 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             name std_type  hv_bus  mv_bus  lv_bus  sn_hv_mva  sn_mv_mva  \\\n",
        "0  HV-MV-MV-Trafo     None      33      36      37       40.0       15.0   \n",
        "\n",
-       "   sn_lv_mva  vn_hv_kv  vn_mv_kv  ...  tap_pos  tap_at_star_point  in_service  \\\n",
-       "0       25.0     110.0      20.0  ...        0              False        True   \n",
+       "   sn_lv_mva  vn_hv_kv  vn_mv_kv  vn_lv_kv  vk_hv_percent  vk_mv_percent  \\\n",
+       "0       25.0     110.0      20.0      10.0           10.1           10.1   \n",
        "\n",
-       "   vk0_hv_percent  vk0_mv_percent  vk0_lv_percent  vkr0_hv_percent  \\\n",
-       "0             NaN             NaN             NaN              NaN   \n",
+       "   vk_lv_percent  vkr_hv_percent  vkr_mv_percent  vkr_lv_percent  pfe_kw  \\\n",
+       "0           10.1        0.266667        0.033333            0.04     0.0   \n",
        "\n",
-       "   vkr0_mv_percent  vkr0_lv_percent  vector_group  \n",
-       "0              NaN              NaN           NaN  \n",
+       "   i0_percent  shift_mv_degree  shift_lv_degree tap_side  tap_neutral  \\\n",
+       "0         0.0             30.0             30.0       hv            0   \n",
        "\n",
-       "[1 rows x 37 columns]"
+       "   tap_min  tap_max  tap_step_percent  tap_step_degree  tap_pos  \\\n",
+       "0       -8        8              1.25              NaN        0   \n",
+       "\n",
+       "   tap_at_star_point  in_service  vk0_hv_percent  vk0_mv_percent  \\\n",
+       "0              False        True             NaN             NaN   \n",
+       "\n",
+       "   vk0_lv_percent  vkr0_hv_percent  vkr0_mv_percent  vkr0_lv_percent  \\\n",
+       "0             NaN              NaN              NaN              NaN   \n",
+       "\n",
+       "   vector_group  \n",
+       "0           NaN  "
       ]
      },
      "execution_count": 18,
@@ -4407,7 +4451,10 @@
        "      <th>vk_percent</th>\n",
        "      <th>vkr_percent</th>\n",
        "      <th>pfe_kw</th>\n",
-       "      <th>...</th>\n",
+       "      <th>i0_percent</th>\n",
+       "      <th>shift_degree</th>\n",
+       "      <th>tap_side</th>\n",
+       "      <th>tap_neutral</th>\n",
        "      <th>tap_min</th>\n",
        "      <th>tap_max</th>\n",
        "      <th>tap_step_percent</th>\n",
@@ -4433,7 +4480,10 @@
        "      <td>4.0</td>\n",
        "      <td>1.325</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.2375</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>hv</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.5</td>\n",
@@ -4447,23 +4497,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          name std_type  hv_bus  lv_bus  sn_mva  vn_hv_kv  vn_lv_kv  \\\n",
        "1  MV-LV-Trafo     None      41      45     0.4      10.0       0.4   \n",
        "\n",
-       "   vk_percent  vkr_percent  pfe_kw  ...  tap_min  tap_max tap_step_percent  \\\n",
-       "1         4.0        1.325    0.95  ...     -2.0      2.0              2.5   \n",
+       "   vk_percent  vkr_percent  pfe_kw  i0_percent  shift_degree tap_side  \\\n",
+       "1         4.0        1.325    0.95      0.2375         150.0       hv   \n",
        "\n",
-       "   tap_step_degree  tap_pos  tap_phase_shifter  parallel   df  in_service  \\\n",
-       "1              NaN      0.0              False         1  1.0        True   \n",
+       "   tap_neutral  tap_min  tap_max  tap_step_percent  tap_step_degree  tap_pos  \\\n",
+       "1          0.0     -2.0      2.0               2.5              NaN      0.0   \n",
        "\n",
-       "   tp_pos  \n",
-       "1     0.0  \n",
-       "\n",
-       "[1 rows x 24 columns]"
+       "   tap_phase_shifter  parallel   df  in_service  tp_pos  \n",
+       "1              False         1  1.0        True     0.0  "
       ]
      },
      "execution_count": 24,
@@ -5268,6 +5315,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "numba cannot be imported and numba functions are disabled.\n",
+      "Probably the execution is slow.\n",
+      "Please install numba to gain a massive speedup.\n",
+      "(or if you prefer slow execution, set the flag numba=False to avoid this warning!)\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "This pandapower network includes the following parameter tables:\n",
@@ -5326,7 +5384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
