--- a/tutorials/opf_dcline.ipynb
+++ b/tutorials/opf_dcline.ipynb
@@ -61,7 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp.runpp(net)"
+    "pp.runpp(net)\n",
+    "\n"
    ]
   },
   {
@@ -169,16 +170,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "hp.pandapower.run - INFO: These elements have missing power constraint values, which are considered in OPF as +- 1000 TW: ['dcline']\n",
-      "hp.pandapower.run - INFO: 'min_vm_pu' is missing in bus table. In OPF these limits are considered as 0.0 pu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pp.runopp(net, delta=1e-16)"
    ]
@@ -348,16 +340,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "hp.pandapower.run - INFO: These elements have missing power constraint values, which are considered in OPF as +- 1000 TW: ['dcline']\n",
-      "hp.pandapower.run - INFO: 'min_vm_pu' is missing in bus table. In OPF these limits are considered as 0.0 pu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "net.poly_cost.cp1_eur_per_mw.at[costeg0] = 8\n",
     "net.poly_cost.cp1_eur_per_mw.at[costeg1] = 10\n",
@@ -550,16 +533,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "hp.pandapower.run - INFO: These elements have missing power constraint values, which are considered in OPF as +- 1000 TW: ['dcline']\n",
-      "hp.pandapower.run - INFO: 'min_vm_pu' is missing in bus table. In OPF these limits are considered as 0.0 pu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "net.line[\"max_loading_percent\"] = 100\n",
     "pp.runopp(net, delta=1e-16)"
@@ -636,7 +610,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>644.488864</td>\n",
-       "      <td>-0.680457</td>\n",
+       "      <td>-0.680453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -649,7 +623,7 @@
       ],
       "text/plain": [
        "         p_mw     q_mvar\n",
-       "0  644.488864  -0.680457\n",
+       "0  644.488864  -0.680453\n",
        "1  170.582480 -16.528459"
       ]
      },
@@ -710,7 +684,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>639.594579</td>\n",
-       "      <td>-6.207846</td>\n",
+       "      <td>-6.207842</td>\n",
        "      <td>-632.76691</td>\n",
        "      <td>-10.099065</td>\n",
        "      <td>6.827669</td>\n",
@@ -725,7 +699,7 @@
       ],
       "text/plain": [
        "    p_from_mw  q_from_mvar    p_to_mw  q_to_mvar     pl_mw  vm_from_pu  \\\n",
-       "0  639.594579    -6.207846 -632.76691 -10.099065  6.827669    1.012431   \n",
+       "0  639.594579    -6.207842 -632.76691 -10.099065  6.827669    1.012431   \n",
        "\n",
        "   va_from_degree  vm_to_pu  va_to_degree  \n",
        "0       -1.875022  1.024385      0.875621  "
@@ -751,16 +725,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "hp.pandapower.run - INFO: These elements have missing power constraint values, which are considered in OPF as +- 1000 TW: ['dcline']\n",
-      "hp.pandapower.run - INFO: 'min_vm_pu' is missing in bus table. In OPF these limits are considered as 0.0 pu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "costeg1 = pp.create_poly_cost(net, 0, 'dcline', cp1_eur_per_mw=3)\n",
     "pp.runopp(net, delta=1e-16)"
@@ -839,7 +804,7 @@
        "      <td>161.063564</td>\n",
        "      <td>6.442959</td>\n",
        "      <td>-158.973825</td>\n",
-       "      <td>4.897224</td>\n",
+       "      <td>4.897222</td>\n",
        "      <td>2.089738</td>\n",
        "      <td>1.018095</td>\n",
        "      <td>-0.467991</td>\n",
@@ -852,7 +817,7 @@
       ],
       "text/plain": [
        "    p_from_mw  q_from_mvar     p_to_mw  q_to_mvar     pl_mw  vm_from_pu  \\\n",
-       "0  161.063564     6.442959 -158.973825   4.897224  2.089738    1.018095   \n",
+       "0  161.063564     6.442959 -158.973825   4.897222  2.089738    1.018095   \n",
        "\n",
        "   va_from_degree  vm_to_pu  va_to_degree  \n",
        "0       -0.467991  1.016202     -0.938724  "
@@ -878,16 +843,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "hp.pandapower.run - INFO: These elements have missing power constraint values, which are considered in OPF as +- 1000 TW: ['dcline']\n",
-      "hp.pandapower.run - INFO: 'min_vm_pu' is missing in bus table. In OPF these limits are considered as 0.0 pu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "net.line[\"max_loading_percent\"] = 1000\n",
     "pp.runopp(net, delta=1e-16)"
@@ -1053,7 +1009,7 @@
     {
      "data": {
       "text/plain": [
-       "8056.418890964989"
+       "8056.418890967909"
       ]
      },
      "execution_count": 22,
@@ -1073,7 +1029,7 @@
     {
      "data": {
       "text/plain": [
-       "8056.418890964989"
+       "8056.418890967909"
       ]
      },
      "execution_count": 23,
@@ -1103,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
